--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="letter-head">
             <img src="https://i.postimg.cc/wMJ2bCgV/mas-logos.jpg" alt="Logo Ministerio Vivos para Servir" class="logo">
             <h1>MINISTERIO "VIVOS PARA SERVIR"</h1>
-            <p>"Porque para esto trabajamos y luchamos"</p>
+            <p>"Un equipo que vive para servir a Dios a través de la predicación del evangelio"</p>
         </div>
         
         <h2>CONVOCATORIA PARA ASESOR ACADÉMICO</h2>
